testing/runner/tests/orderby/snapshots/orderby_plan__orderby_a_desc_uses_temp_btree.snap
---
source: orderby_plan.sqltest
expression: SELECT * FROM t ORDER BY a DESC;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - orderby_temp_btree
  database: ':memory:'
---
QUERY PLAN
|--SCAN t
`--USE TEMP B-TREE FOR ORDER BY

BYTECODE
addr  opcode          p1  p2  p3  p4       p5  comment
   0  Init             0  15   0            0  Start at 15
   1  SorterOpen       0   1   0  k(1,-B)   0  cursor=0
   2  OpenRead         1   2   0  k(2,B)    0  table=t, root=2, iDb=0
   3  Rewind           1   8   0            0  Rewind table t
   4    Column         1   0   3            0  r[3]=t.a
   5    MakeRecord     3   1   2            0  r[2]=mkrec(r[3..3])
   6    SorterInsert   0   2   0  0         0  key=r[2]
   7  Next             1   4   0            0
   8  OpenPseudo       2   2   1            0  1 columns in r[2]
   9  SorterSort       0  14   0            0
  10    SorterData     0   2   2            0  r[2]=data
  11    Column         2   0   1            0  r[1]=pseudo.column 0
  12    ResultRow      1   1   0            0  output=r[1]
  13  SorterNext       0  10   0            0
  14  Halt             0   0   0            0
  15  Transaction      0   1   1            0  iDb=0 tx_mode=Read
  16  Goto             0   1   0            0
