testing/runner/tests/orderby/snapshots/orderby_plan__orderby_asc_nulls_first_default_uses_covering_index.snap
---
source: orderby_plan.sqltest
expression: |-
  SELECT id, val
      FROM t
      ORDER BY val ASC NULLS FIRST
      LIMIT 3;
info:
  statement_type: SELECT
  tables:
  - t
  setup_blocks:
  - orderby_plan_nulls
  database: ':memory:'
---
QUERY PLAN
`--SCAN t USING COVERING INDEX idx_t_val
